--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -181,14 +184,112 @@
                 </div>
 
                 <div class="stores">
-                    <img src="assets/g1.png" alt="">
                     <img src="assets/g2.png" alt="">
+                    <img src="assets/g1.png" alt="">
                 </div>
             </div>
         </div>
    </section>
 
-     
-   
+     <p class="rent-para">Rent/Lease In three easy steps</p>
+
+     <section class="number-location">
+
+        <div class="one-parent">
+            <div class="number-absolute ">
+                <p class="abs-1">01</p>
+            </div>
+            <div class="one-parent-child">
+                <div class="image-1-parent">
+                    <img src="assets/01-icon.png" alt="" class="image-1">
+                </div>
+                <div class="location-desc-parent">
+                    <p class="location-desc-para">Select the location. Browse through our available options and find the perfect car to suit your needs</p>
+                </div>
+            </div>
+        </div>
+        <div class="one-parent">
+            <div class="number-absolute">
+                <p class="abs-1">02</p>
+            </div>
+            <div class="one-parent-child">
+                <div class="image-2-parent">
+                    <img src="assets/calendar.png" alt="" class="image-2">
+                </div>
+                <div class="calendar-desc-parent">
+                    <p class="calendar-desc-para">Choose your desired Pick-Up date and time.</p>
+                </div>
+            </div>
+        </div>
+        <div class="one-parent">
+            <div class="number-absolute">
+                <p class="abs-1">03</p>
+            </div>
+            <div class="one-parent-child">
+                <div class="image-3-parent">
+                    <img src="assets/caricon.png" alt="" class="image-3">
+                </div>
+                <div class="car-desc-parent">
+                    <p class="car-desc-para">Make payment and book the car. Select an option to either have the car delivered to your location or pick it up directly from us.</p>
+                </div>
+            </div>
+        </div>
+
+
+     </section>
+
+     <section class="locations-container">
+        <div class="locations-heading-parent">
+            <p class="locations-heading-para">Locations</p>
+        </div>
+        <div class="places-container">
+            <div class="place-dubai">
+                <div class="locate-place">
+                    <img src="assets/locate.png" alt="" class="locate-icon">
+                </div>
+                <div class="dubai-name-parent">
+                    <p class="dubai-name-para">Dubai</p>
+                </div>
+                <div class="line"></div>
+            </div>
+            <div class="place-abudabi">
+                <div class="locate-place">
+                    <img src="assets/locate.png" alt="" class="locate-icon">
+                </div>
+                <div class="abudabi-name-parent">
+                    <p class="abudabi-name-para">Abu Dhabi</p>
+                </div>
+                <div class="line"></div>
+            </div>
+            <div class="place-sharjah">
+                <div class="locate-place">
+                    <img src="assets/locate.png" alt="" class="locate-icon">
+                </div>
+                <div class="sharjah-name-parent">
+                    <p class="sharjah-name-para">Sharjah</p>
+                </div>
+                <div class="line"></div>
+            </div>
+            <div class="place-fujairah">
+                <div class="locate-place">
+                    <img src="assets/locate.png" alt="" class="locate-icon">
+                </div>
+                <div class="fujairah-name-parent">
+                    <p class="fujairah-name-para">Fujairah</p>
+                </div>
+                <div class="line"></div>
+            </div>
+            <div class="place-ras">
+                <div class="locate-place">
+                    <img src="assets/locate.png" alt="" class="locate-icon">
+                </div>
+                <div class="ras-name-parent">
+                    <p class="ras-name-para">Ras Al Khaimah</p>
+                </div>
+                <div class="line"></div>
+            </div>
+        </div>
+     </section>
+
 </body>
 </html>
