--- a/index.html
+++ b/index.html
@@ -286,10 +286,26 @@
                 <div class="ras-name-parent">
                     <p class="ras-name-para">Ras Al Khaimah</p>
                 </div>
-                <div class="line"></div>
             </div>
         </div>
      </section>
+
+
+     <p class="faq-para">Frequently asked questions</p>
+
+    <section class="faq-container">
+        <div class="eligibility">
+            <div class="age-group">
+                <p class="book-car">What is my eligibility to book a car?</p>
+                <p class="license">You should be 18 years old or above and you must possess a valid driving license.</p>
+            </div>
+            <div>
+                <img src="assets/cross.png" alt="">
+            </div>
+            
+        </div>
+</section>
+
 
 </body>
 </html>
