--- a/index.html
+++ b/index.html
@@ -14,33 +14,37 @@
 </head>
 <body>
 
-   <header class="header">
-       <div class="header-container">
-            <div class="logo">
-                <img src="assets/Layer_1.png" alt="logo image">
+  <header class="header">
+    <div class="header-container">
+        <div class="logo">
+            <img src="assets/Layer_1.png" alt="logo image">
+        </div>
+        <div class="menu-toggle">
+            <img src="assets/ham.png" alt="menu" class="hamburger-icon">
+        </div>
+        <div class="main-links">
+            <div class="links-parent">
+                <ul class="links">
+                    <li>About</li>
+                    <li>Offers</li>
+                    <li>Corporate</li>
+                    <li>Personal</li>
+                    <li>Locations</li>
+                    <li>Contact Us</li>
+                    <li><img class="button-logo" src="assets/Group 1171275109.png" alt="button image"></li>
+                </ul>
             </div>
-            <div class="main-links">
-                <div class="links-parent">
-                    <ul class="links">
-                        <li>About</li>
-                        <li>Offers</li>
-                        <li>Corporate</li>
-                        <li>Personal</li>
-                        <li>Locations</li>
-                        <li>Contact Us</li>
-                        <li><img class="button-logo" src="assets/Group 1171275109.png" alt="button image"></li>
-                    </ul>
-                </div>
-                <div class="small-parent">
-                    <small class="small"> Sunday Pick Up/Drop-Off only at Dubai Silicon Oasis & Habtoor Grand Sales Counters | All Rates inclusive of VAT. T&C’s apply | Follow us on Social Media for New Offers</small>
-                </div>   
-            </div>
+            <div class="small-parent">
+                <p class="small"> Sunday Pick Up/Drop-Off only at Dubai Silicon Oasis & Habtoor Grand Sales Counters | All Rates inclusive of VAT. T&C’s apply | Follow us on Social Media for</p>
+            </div>   
+        </div>
 
-            <div class="social-container">
-                <img src="assets/Frame 1171274976.png" alt="">
-            </div>
-       </div>
-    </header>
+        <div class="social-container">
+            <img src="assets/Frame 1171274976.png" alt="">
+        </div>
+    </div>
+</header>
+
 
    <section class="red-container">
     <div class="red-container-child">
